src/test/deca/context/invalid/pierre/objects/wrongClassInMethod.deca
class A {
    void main(B b) {}
}
class B extends A {}
{
    A a = new A();
    a.main(a);
}